--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,6 +3,14 @@ body {
   background: #fff;
 }
 
+iframe {
+  display: block;
+  background: #000;
+  border: none;
+  height: 100vh;
+  width: 100vw;
+}
+
 span {
   padding-left: 20px;
   white-space:nowrap;
