--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,10 +5,8 @@ body {
 
 iframe {
   display: block;
-  background: #000;
-  border: none;
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  height: calc(100vh - 350px);
 }
 
 span {
@@ -58,7 +56,7 @@ span {
 
 .position:hover {
   outline: none;
-  border: 2px solid #ccc;
+  border: 4px solid #ccc;
 }
 
 
