--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,29 +1,35 @@
 body {
-  margin: 20px;
+  margin: 0px;
   background: #fff;
 }
-
 iframe {
   display: block;
   width: 100%;
   height: calc(100vh - 350px);
 }
-
 span {
   padding-left: 20px;
-  white-space:nowrap;
+  white-space: nowrap;
 }
 
-#container {
-  margin: 0 auto;
+.container {
+  padding: 8px;
 }
 
-.section {
-  margin-bottom: 30px;
+.container-fluid {
+  padding: 8px;
 }
+
+#calibrate {
+  margin-left: 12px;
+}
+
 .btn {
-  width: 100px;
+  margin: 4px;
+  width: 120px;
+  border-radius: 3px;
 }
+
 .right {
   float: right;
 }
@@ -31,14 +37,11 @@ span {
   text-align: center;
 }
 
-.btn {
-  margin: 4px;
-}
 
 .position {
   background: #ddd;
   border: 0px solid;
-  border-radius: 7px;
+  border-radius: 6px;
   height: 100px;
   width: 150px;
   margin-left: 12px;
@@ -58,5 +61,3 @@ span {
   outline: none;
   border: 4px solid #ccc;
 }
-
-
