control navbar additions, status message etc

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -25,7 +25,16 @@ span {
 }
 
 .container-fluid {
+  padding: 0px;
+}
+
+.section {
   padding: 8px;
+}
+
+#Controls {
+  height: 46px;
+  margin-bottom: -8px;
 }
 
 #Move {
