--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,5 +1,5 @@
 html {
-  overflow-y: scroll;
+  overflow: hidden;
 }
 body {
   margin: 0px;
@@ -22,14 +22,21 @@ iframe {
 .section {
   padding: 8px;
 }
+h4 {
+  padding-top: 8px;
+  margin: 0px;
+}
 
 #Controls {
-  height: 46px;
-  margin-bottom: -8px;
+  height: 45px;
+  margin-top: -8px;
 }
 
 #Move {
   background: var(--bs-blue)
+}
+#Reset {
+  background: var(--bs-red)
 }
 
 #calibrate {
@@ -42,6 +49,7 @@ iframe {
 
 .btn {
   margin: 4px;
+  margin-right: 0px;
   width: 120px;
   border-radius: 3px;
 }
@@ -54,7 +62,7 @@ iframe {
 }
 
 .position {
-  background: #ddd;
+  background: var(--bs-gray-300);
   border: 0px solid;
   border-radius: 6px;
   height: 100px;
@@ -63,16 +71,19 @@ iframe {
   margin-right: 12px;
 }
 .position.full {
-  background: var(--bs-secondary);
+  color: var(--bs-white);
+  background: var(--bs-gray-600);
 }
 .position.source {
+  color: var(--bs-white);
   background: var(--bs-primary);
 }
 .position.target {
+  color: var(--bs-white);
   background: var(--bs-danger);
 }
 
 .position:hover {
   outline: none;
-  border: 4px solid #ccc;
+  border: 2px solid #000;
 }
